--- a/MegaboxClone/Cell/Store List/CollectionViewHeader/CollectionReusableView.xib
+++ b/MegaboxClone/Cell/Store List/CollectionViewHeader/CollectionReusableView.xib
@@ -11,27 +11,171 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CollectionReusableView" reuseIdentifier="CollectionReusableView" id="U6b-Vx-4bR" customClass="CollectionReusableView" customModule="MegaboxClone" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="544"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fQ-e5-wSM">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
-                    <color key="backgroundColor" systemColor="systemBrownColor"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fQ-e5-wSM" userLabel="상단">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1인1팝, 1인1콜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fSc-fL-3NM">
+                            <rect key="frame" x="15" y="20" width="115.5" height="24"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="더블콤보로 함께 해요!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5MQ-Zj-N8X">
+                            <rect key="frame" x="15" y="49" width="171" height="24"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.066666666669999999" green="0.066666666669999999" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="4fQ-e5-wSM" secondAttribute="height" multiplier="2:1" id="L7x-w7-dda"/>
+                        <constraint firstItem="fSc-fL-3NM" firstAttribute="top" secondItem="4fQ-e5-wSM" secondAttribute="top" constant="20" id="LFT-Az-DFG"/>
+                        <constraint firstItem="5MQ-Zj-N8X" firstAttribute="top" secondItem="fSc-fL-3NM" secondAttribute="bottom" constant="5" id="TKf-fT-AYR"/>
+                        <constraint firstItem="5MQ-Zj-N8X" firstAttribute="leading" secondItem="fSc-fL-3NM" secondAttribute="leading" id="UTU-5C-gx1"/>
+                        <constraint firstItem="fSc-fL-3NM" firstAttribute="leading" secondItem="4fQ-e5-wSM" secondAttribute="leading" constant="15" id="Yia-fE-t6T"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mVx-gA-c3v">
+                    <rect key="frame" x="0.0" y="160" width="320" height="384"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="콤보 누끼" translatesAutoresizingMaskIntoConstraints="NO" id="Yrs-xq-Gve">
+                            <rect key="frame" x="80" y="-67" width="160" height="160"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="Yrs-xq-Gve" secondAttribute="height" multiplier="1:1" id="Gyc-K7-p5R"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="더블콤보" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vYX-B1-3dy">
+                            <rect key="frame" x="130.5" y="101" width="59" height="20.5"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20.5" id="cyd-Ra-yUl"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="팝콘(R) + 탄산음료(R) 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KlK-9F-LdP">
+                            <rect key="frame" x="85.5" y="126.5" width="149" height="18"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="18" id="hfD-H4-Rf8"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12,000 원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qlM-L7-YTy">
+                            <rect key="frame" x="126.5" y="154.5" width="67.5" height="19.5"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="19.5" id="dzc-Bg-saS"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="스토어 스택 이미지" translatesAutoresizingMaskIntoConstraints="NO" id="L6j-Gq-COM">
+                            <rect key="frame" x="32" y="194" width="256" height="64"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="L6j-Gq-COM" secondAttribute="height" multiplier="4:1" id="WpO-el-jXU"/>
+                            </constraints>
+                        </imageView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CsZ-Gf-0bi">
+                            <rect key="frame" x="0.0" y="278" width="320" height="106"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="메가티켓" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p9Q-OB-yDT">
+                                    <rect key="frame" x="15" y="74" width="48.5" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EvS-T9-mZg">
+                                    <rect key="frame" x="15" y="94.5" width="48.5" height="1.5"/>
+                                    <color key="backgroundColor" systemColor="labelColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1.5" id="Kmp-jq-zRQ"/>
+                                    </constraints>
+                                </view>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="팝콘/음료/굿즈" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gbe-M5-vnZ">
+                                    <rect key="frame" x="73.5" y="74.5" width="75.5" height="16"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="포인트몰" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKF-ea-Ltc">
+                                    <rect key="frame" x="159" y="74.5" width="45" height="16"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="한줄광고" translatesAutoresizingMaskIntoConstraints="NO" id="sKI-gD-r8U">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="p9Q-OB-yDT" secondAttribute="bottom" constant="15" id="4xu-tB-hye"/>
+                                <constraint firstItem="sKI-gD-r8U" firstAttribute="leading" secondItem="CsZ-Gf-0bi" secondAttribute="leading" id="6zo-kx-Plc"/>
+                                <constraint firstItem="PKF-ea-Ltc" firstAttribute="centerY" secondItem="Gbe-M5-vnZ" secondAttribute="centerY" id="E4w-ss-6YC"/>
+                                <constraint firstItem="p9Q-OB-yDT" firstAttribute="top" secondItem="sKI-gD-r8U" secondAttribute="bottom" constant="10" id="Myj-2D-DU1"/>
+                                <constraint firstItem="EvS-T9-mZg" firstAttribute="top" secondItem="p9Q-OB-yDT" secondAttribute="bottom" constant="3.5" id="O8m-tL-D62"/>
+                                <constraint firstItem="EvS-T9-mZg" firstAttribute="leading" secondItem="p9Q-OB-yDT" secondAttribute="leading" id="Ukh-fx-G2h"/>
+                                <constraint firstItem="EvS-T9-mZg" firstAttribute="trailing" secondItem="p9Q-OB-yDT" secondAttribute="trailing" id="e1h-mV-l38"/>
+                                <constraint firstItem="Gbe-M5-vnZ" firstAttribute="centerY" secondItem="p9Q-OB-yDT" secondAttribute="centerY" id="i5U-GG-p9r"/>
+                                <constraint firstItem="PKF-ea-Ltc" firstAttribute="leading" secondItem="Gbe-M5-vnZ" secondAttribute="trailing" constant="10" id="jee-y0-JcH"/>
+                                <constraint firstItem="sKI-gD-r8U" firstAttribute="top" secondItem="CsZ-Gf-0bi" secondAttribute="top" id="lmv-sP-Tsr"/>
+                                <constraint firstAttribute="trailing" secondItem="sKI-gD-r8U" secondAttribute="trailing" id="oOi-xe-eSM"/>
+                                <constraint firstItem="p9Q-OB-yDT" firstAttribute="leading" secondItem="CsZ-Gf-0bi" secondAttribute="leading" constant="15" id="sM0-xL-M0h"/>
+                                <constraint firstItem="Gbe-M5-vnZ" firstAttribute="leading" secondItem="p9Q-OB-yDT" secondAttribute="trailing" constant="10" id="vzb-B1-Gq2"/>
+                                <constraint firstItem="EvS-T9-mZg" firstAttribute="bottom" secondItem="p9Q-OB-yDT" secondAttribute="bottom" constant="5" id="w30-c0-WQG"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstItem="vYX-B1-3dy" firstAttribute="centerX" secondItem="Yrs-xq-Gve" secondAttribute="centerX" id="2Jj-tI-7oq"/>
+                        <constraint firstAttribute="width" secondItem="mVx-gA-c3v" secondAttribute="height" multiplier="1:1.2" id="4U9-8M-ru9"/>
+                        <constraint firstAttribute="bottom" secondItem="CsZ-Gf-0bi" secondAttribute="bottom" id="6ny-eu-EQt"/>
+                        <constraint firstItem="L6j-Gq-COM" firstAttribute="top" secondItem="qlM-L7-YTy" secondAttribute="bottom" constant="20" id="GJi-LQ-IwU"/>
+                        <constraint firstItem="qlM-L7-YTy" firstAttribute="top" secondItem="KlK-9F-LdP" secondAttribute="bottom" constant="10" id="IU9-5l-C2f"/>
+                        <constraint firstItem="KlK-9F-LdP" firstAttribute="centerX" secondItem="vYX-B1-3dy" secondAttribute="centerX" id="JdP-Lf-p6B"/>
+                        <constraint firstItem="KlK-9F-LdP" firstAttribute="top" secondItem="vYX-B1-3dy" secondAttribute="bottom" constant="5" id="L7o-VT-MTx"/>
+                        <constraint firstAttribute="trailing" secondItem="CsZ-Gf-0bi" secondAttribute="trailing" id="PUS-Yf-GMb"/>
+                        <constraint firstItem="CsZ-Gf-0bi" firstAttribute="top" secondItem="L6j-Gq-COM" secondAttribute="bottom" constant="20" id="Zsh-CT-nm8"/>
+                        <constraint firstItem="qlM-L7-YTy" firstAttribute="centerX" secondItem="KlK-9F-LdP" secondAttribute="centerX" id="aKx-Ed-D5w"/>
+                        <constraint firstItem="L6j-Gq-COM" firstAttribute="width" secondItem="mVx-gA-c3v" secondAttribute="width" multiplier="0.8" id="c80-EJ-eII"/>
+                        <constraint firstItem="CsZ-Gf-0bi" firstAttribute="leading" secondItem="mVx-gA-c3v" secondAttribute="leading" id="fmg-bI-qWJ"/>
+                        <constraint firstItem="Yrs-xq-Gve" firstAttribute="top" secondItem="mVx-gA-c3v" secondAttribute="top" constant="-67" id="iAe-Jo-2lm"/>
+                        <constraint firstItem="vYX-B1-3dy" firstAttribute="top" secondItem="Yrs-xq-Gve" secondAttribute="bottom" constant="8" symbolic="YES" id="rvL-9I-dO3"/>
+                        <constraint firstItem="L6j-Gq-COM" firstAttribute="centerX" secondItem="qlM-L7-YTy" secondAttribute="centerX" id="tJM-L1-gO9"/>
+                    </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
             <constraints>
+                <constraint firstItem="Yrs-xq-Gve" firstAttribute="width" secondItem="VXr-Tz-HHm" secondAttribute="width" multiplier="0.5" id="CfH-PF-uw6"/>
+                <constraint firstItem="Yrs-xq-Gve" firstAttribute="centerX" secondItem="VXr-Tz-HHm" secondAttribute="centerX" id="DTG-iP-8hW"/>
+                <constraint firstItem="mVx-gA-c3v" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" id="LCp-eX-dye"/>
                 <constraint firstItem="4fQ-e5-wSM" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="ViD-xg-eW0"/>
-                <constraint firstAttribute="bottom" secondItem="4fQ-e5-wSM" secondAttribute="bottom" id="fkU-fG-1Lg"/>
+                <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="mVx-gA-c3v" secondAttribute="trailing" id="VmN-Pf-2Ya"/>
+                <constraint firstItem="Yrs-xq-Gve" firstAttribute="top" secondItem="5MQ-Zj-N8X" secondAttribute="bottom" constant="20" id="Zl9-SA-6HG"/>
                 <constraint firstItem="4fQ-e5-wSM" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" id="mrA-HH-jQK"/>
+                <constraint firstItem="mVx-gA-c3v" firstAttribute="top" secondItem="4fQ-e5-wSM" secondAttribute="bottom" id="nK9-bB-Oj0"/>
                 <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="4fQ-e5-wSM" secondAttribute="trailing" id="qLq-7y-ge6"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="91"/>
+            <point key="canvasLocation" x="137.68115942028987" y="255.80357142857142"/>
         </collectionReusableView>
     </objects>
     <resources>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="스토어 스택 이미지" width="1006" height="217"/>
+        <image name="콤보 누끼" width="423" height="407"/>
+        <image name="한줄광고" width="1123" height="297"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
