--- a/MegaboxClone/Cell/Store List/Store Cell/StoreCollectionViewCell.xib
+++ b/MegaboxClone/Cell/Store List/Store Cell/StoreCollectionViewCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,25 +16,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Td0-Vq-oJP">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                        <color key="backgroundColor" systemColor="systemGray5Color"/>
-                    </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZiU-b8-T1C">
+                        <rect key="frame" x="-100" y="-175" width="250" height="400"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="400" id="UqC-0H-yPq"/>
+                            <constraint firstAttribute="width" constant="250" id="s4a-0r-DCN"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="Td0-Vq-oJP" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Baw-Oq-ihb"/>
-                <constraint firstAttribute="trailing" secondItem="Td0-Vq-oJP" secondAttribute="trailing" id="myk-yg-FWI"/>
-                <constraint firstAttribute="bottom" secondItem="Td0-Vq-oJP" secondAttribute="bottom" id="nhB-Ff-gXc"/>
-                <constraint firstItem="Td0-Vq-oJP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="rm9-zd-Vt5"/>
+                <constraint firstItem="ZiU-b8-T1C" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="47g-aA-2gN"/>
+                <constraint firstItem="ZiU-b8-T1C" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ryv-Yy-6zX"/>
             </constraints>
+            <connections>
+                <outlet property="imageView" destination="ZiU-b8-T1C" id="oYM-hw-j27"/>
+            </connections>
             <point key="canvasLocation" x="139" y="127"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
