--- a/MegaboxClone/Cell/Store List/CollectionViewHeader/CollectionReusableView.xib
+++ b/MegaboxClone/Cell/Store List/CollectionViewHeader/CollectionReusableView.xib
@@ -18,14 +18,14 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="160"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1인1팝, 1인1콜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fSc-fL-3NM">
-                            <rect key="frame" x="15" y="20" width="115.5" height="24"/>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                            <rect key="frame" x="15" y="20" width="138" height="29"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="더블콤보로 함께 해요!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5MQ-Zj-N8X">
-                            <rect key="frame" x="15" y="49" width="171" height="24"/>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                            <rect key="frame" x="15" y="54" width="204.5" height="29"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -43,74 +43,74 @@
                     <rect key="frame" x="0.0" y="160" width="320" height="384"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="콤보 누끼" translatesAutoresizingMaskIntoConstraints="NO" id="Yrs-xq-Gve">
-                            <rect key="frame" x="80" y="-67" width="160" height="160"/>
+                            <rect key="frame" x="80" y="-57" width="160" height="160"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="Yrs-xq-Gve" secondAttribute="height" multiplier="1:1" id="Gyc-K7-p5R"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="더블콤보" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vYX-B1-3dy">
-                            <rect key="frame" x="130.5" y="101" width="59" height="20.5"/>
+                            <rect key="frame" x="129" y="111" width="62.5" height="20.5"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="20.5" id="cyd-Ra-yUl"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="팝콘(R) + 탄산음료(R) 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KlK-9F-LdP">
+                            <rect key="frame" x="81" y="136.5" width="158.5" height="18"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="18" id="hfD-H4-Rf8"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12,000 원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qlM-L7-YTy">
+                            <rect key="frame" x="124.5" y="164.5" width="71" height="19.5"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="19.5" id="dzc-Bg-saS"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="팝콘(R) + 탄산음료(R) 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KlK-9F-LdP">
-                            <rect key="frame" x="85.5" y="126.5" width="149" height="18"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="18" id="hfD-H4-Rf8"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12,000 원" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qlM-L7-YTy">
-                            <rect key="frame" x="126.5" y="154.5" width="67.5" height="19.5"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="19.5" id="dzc-Bg-saS"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="스토어 스택 이미지" translatesAutoresizingMaskIntoConstraints="NO" id="L6j-Gq-COM">
-                            <rect key="frame" x="32" y="194" width="256" height="64"/>
+                            <rect key="frame" x="32" y="204" width="256" height="64"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="L6j-Gq-COM" secondAttribute="height" multiplier="4:1" id="WpO-el-jXU"/>
                             </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CsZ-Gf-0bi">
-                            <rect key="frame" x="0.0" y="278" width="320" height="106"/>
+                            <rect key="frame" x="0.0" y="288" width="320" height="96"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="메가티켓" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p9Q-OB-yDT">
-                                    <rect key="frame" x="15" y="74" width="48.5" height="17"/>
+                                    <rect key="frame" x="15" y="64" width="48.5" height="17"/>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EvS-T9-mZg">
-                                    <rect key="frame" x="15" y="94.5" width="48.5" height="1.5"/>
+                                    <rect key="frame" x="15" y="84.5" width="48.5" height="1.5"/>
                                     <color key="backgroundColor" systemColor="labelColor"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1.5" id="Kmp-jq-zRQ"/>
                                     </constraints>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="팝콘/음료/굿즈" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gbe-M5-vnZ">
-                                    <rect key="frame" x="73.5" y="74.5" width="75.5" height="16"/>
+                                    <rect key="frame" x="73.5" y="64.5" width="75.5" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="포인트몰" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PKF-ea-Ltc">
-                                    <rect key="frame" x="159" y="74.5" width="45" height="16"/>
+                                    <rect key="frame" x="159" y="64.5" width="45" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="한줄광고" translatesAutoresizingMaskIntoConstraints="NO" id="sKI-gD-r8U">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -146,7 +146,6 @@
                         <constraint firstItem="qlM-L7-YTy" firstAttribute="centerX" secondItem="KlK-9F-LdP" secondAttribute="centerX" id="aKx-Ed-D5w"/>
                         <constraint firstItem="L6j-Gq-COM" firstAttribute="width" secondItem="mVx-gA-c3v" secondAttribute="width" multiplier="0.8" id="c80-EJ-eII"/>
                         <constraint firstItem="CsZ-Gf-0bi" firstAttribute="leading" secondItem="mVx-gA-c3v" secondAttribute="leading" id="fmg-bI-qWJ"/>
-                        <constraint firstItem="Yrs-xq-Gve" firstAttribute="top" secondItem="mVx-gA-c3v" secondAttribute="top" constant="-67" id="iAe-Jo-2lm"/>
                         <constraint firstItem="vYX-B1-3dy" firstAttribute="top" secondItem="Yrs-xq-Gve" secondAttribute="bottom" constant="8" symbolic="YES" id="rvL-9I-dO3"/>
                         <constraint firstItem="L6j-Gq-COM" firstAttribute="centerX" secondItem="qlM-L7-YTy" secondAttribute="centerX" id="tJM-L1-gO9"/>
                     </constraints>
@@ -159,7 +158,7 @@
                 <constraint firstItem="mVx-gA-c3v" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" id="LCp-eX-dye"/>
                 <constraint firstItem="4fQ-e5-wSM" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="ViD-xg-eW0"/>
                 <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="mVx-gA-c3v" secondAttribute="trailing" id="VmN-Pf-2Ya"/>
-                <constraint firstItem="Yrs-xq-Gve" firstAttribute="top" secondItem="5MQ-Zj-N8X" secondAttribute="bottom" constant="20" id="Zl9-SA-6HG"/>
+                <constraint firstItem="Yrs-xq-Gve" firstAttribute="top" secondItem="5MQ-Zj-N8X" secondAttribute="bottom" constant="20" id="ahW-GB-oCJ"/>
                 <constraint firstItem="4fQ-e5-wSM" firstAttribute="leading" secondItem="VXr-Tz-HHm" secondAttribute="leading" id="mrA-HH-jQK"/>
                 <constraint firstItem="mVx-gA-c3v" firstAttribute="top" secondItem="4fQ-e5-wSM" secondAttribute="bottom" id="nK9-bB-Oj0"/>
                 <constraint firstItem="VXr-Tz-HHm" firstAttribute="trailing" secondItem="4fQ-e5-wSM" secondAttribute="trailing" id="qLq-7y-ge6"/>
